lib/stratiform/res/test/stratiform/corpus/pos/custom-sigil-hash-in-keyword.tel
tel 1.0 https://example.com/s @
#hash-as-keyword
