lib/stratiform/res/test/stratiform/corpus/neg/e309-schema-non-contiguous.tel
tel 1.0 https://tel-lang.org/schema/tel-schema

name example

record first-type
  field x string

document
  field name string

record second-type
  field y string
